# conch

./: .gitignore  Cargo.toml  README.md  VOICE_CLIENT_PLAN.md
.claude/rules/: OPENCODE_SSE_SPEC.md  TESTING.md
src/: audio.rs  focus.rs  integration_tests.rs  main.rs  stt.rs  test_utils.rs  transport.rs  viz.rs
tests/: lib.rs
