[package]
name = "conch"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
whisper-rs = "0.14"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[dev-dependencies]
rand = "0.8"
